[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-generator"
version = "1.0.0"
description = "A small command-line tool that turns a JSON file into a clean PDF invoice."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["fpdf2>=2.7.6"]

[project.scripts]
invoicegen = "invoicegen.cli:main"

[project.gui-scripts]
invoicegen-gui = "invoicegen.gui:main"

[tool.setuptools]
packages = ["invoicegen"]